| Summary: | ASTERISK-22627: ARI: Calling record on a non-existent bridge causes response validation failure | ||
| Reporter: | Joshua C. Colp (jcolp) | Labels: | |
| Date Opened: | 2013-10-01 15:43:21 | Date Closed: | 2013-10-15 15:03:03 |
| Priority: | Minor | Regression? | No |
| Status: | Closed/Complete | Components: | Resources/res_ari |
| Versions: | 12.0.0-alpha1 | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | Invoking the record operation on a non-existent bridge results in a response validation failure instead of a 404. | ||
| Comments: | |||